--- a/app/src/main/res/layout/activity_add_package.xml
+++ b/app/src/main/res/layout/activity_add_package.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:hint="Destination"
+        android:hint="Location"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/editTextCapacity"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
@@ -38,7 +38,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:hint="IBANNumber"
+        android:hint="Capacity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/editTextLocation"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
@@ -52,8 +52,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:background="@color/colorPrimary"
-        android:onClick="AddEmployee"
-        android:text="Add Employee"
+        android:onClick="AddPackage"
+        android:text="Add Package"
         android:textAllCaps="false"
         android:textColor="#ffffff"
         app:layout_constraintEnd_toEndOf="parent"
